Fix styling of town map icon and other css [Re: nmkataoka/adv-life#505]
- Fixed styling issue where top nav bar was overflowing page horiz
- Fixed css on BaseIcon so that path fill defaults to currentColor
- Improved css of town map icons and labels

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@
   /** Fonts */
   --body-font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  --header-font-family: 'Cormorant SC', serif;
 }
 
 html {
@@ -73,7 +74,7 @@ code {
 }
 
 h1 {
-  font-family: 'Cormorant SC', serif;
+  font-family: var(--header-font-family);
 }
 
 h1,
